# rust-demo

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  package.json  rollup.config.ts  tsconfig.json
app/scripts/: deploy_service.js
app/src/: index.ts
app/test/: auction.spec.ts  item.spec.ts
services/: Cargo.toml
