[package]
name = "sealed_auction"
version = "0.1.0"
authors = ["Nick Hynes <nhynes@oasislabs.com>"]
edition = "2018"

[dependencies]
map_vec = "0.2"
oasis-std = "0.2"
rand = "0.7"
rand_pcg = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
oasis-test = "0.2"

[package.metadata.oasis.auction.dependencies]
item = { path = "../target/service/item.wasm" }
